@@ -24,6 +24,24 @@ RSpec.describe Kiba::Extend::Transforms::Fingerprint::Add do
     it 'raises error' do
       expect{ result }.to raise_error(Kiba::Extend::Transforms::Fingerprint::DelimiterCollisionError)
     end
+
+    context 'when override_app_delim_check = true' do
+      let(:transforms) do
+        Kiba.job_segment do
+          transform Fingerprint::Add, fields: %i[b c d e], delim: '|||', target: :fp, override_app_delim_check: true
+        end
+      end
+
+      let(:expected) do
+        [
+          {a: 'ant', b: 'bee', c: nil, d: 'deer', e: '', fp: Base64.strict_encode64('bee|||nil|||deer|||empty')}
+        ]
+      end
+
+      it 'transforms as expected' do
+        expect(result).to eq(expected)
+      end
+    end
   end
 
   context 'when a field value matches the delimiter' do
